# stellars-jupyterhub-ds

./: .dockerignore  .env  .gitignore  .gitmodules  CHANGELOG.md  FEATURE_PLAN.md  MOBILE_INTERFACE_PLAN.md  Makefile  README.md  RELEASE.md  compose-gpu.yml  compose.yml  project.env  pyproject.toml  start.bat  start.sh  stop.sh  ttl-animation-checklist.md
services/jupyterhub/duoptimum-docker-proxy/: Makefile  pyproject.toml
services/jupyterhub/duoptimum-docker-proxy/duoptimum_docker_proxy/: __init__.py  config.py  filters.py  manager.py  quota.py  server.py
services/jupyterhub/duoptimum-docker-proxy/tests/: conftest.py  test_filters.py  test_manager.py  test_quota.py  test_server.py
services/jupyterhub/duoptimum-hub-services/: Makefile  pyproject.toml
services/jupyterhub/duoptimum-hub-services/duoptimum_hub_services/: __init__.py  abuse_protection.py  admin_bootstrap.py  api_keys_pool.py  app.py  auth.py  config_validator.py  container_size_cache.py  container_stats_cache.py  docker_proxy.py  docker_utils.py  event_log.py  event_schema_fix.py  events.py  gpu.py  gpu_cache.py  gpu_client.py  gpu_vendor.py  gpuinfo_sidecar.py  groups_config.py  hooks.py  host.py  host_status.py  hydrate.py  idle_culler.py  logging_setup.py  password_cache.py  persisted_cache.py  protected_env.py  sent_notification_log.py  services.py  spawner.py  timing_spawner.py  user_display_preferences.py  user_env_vars.py  user_profiles.py  volume_cache.py  volumes.py
services/jupyterhub/duoptimum-hub-services/tests/: _policy_scenarios.py  conftest.py  test_abuse_protection.py  test_activity_monitor.py  test_admin_bootstrap.py  test_api_keys_pool.py  test_app_handler_registry.py  test_authenticator_bootstrap.py  test_branding.py  test_compose_env_invariants.py  test_config_validator.py  test_container_stats_cache.py  test_docker_proxy.py  test_docker_resource_assignment.py  test_docker_utils.py  test_downloads_guard.py  test_effective_grants.py  test_event_log.py  test_event_schema_fix.py  test_favicon.py  test_gpu.py  test_gpu_cache_connectivity.py  test_gpu_cache_fields.py  test_gpu_detection.py  test_gpu_vendor.py  test_gpuinfo_sidecar.py  test_gpuinfo_url.py  test_group_resolver.py  test_handler_async.py  test_host.py  test_host_cpu.py  test_host_memory.py  test_host_status_provider.py  test_hydrate.py  test_idle_culler.py  test_image_upgrade.py  test_imports.py  test_logging_setup.py  test_password_cache.py  test_persisted_cache.py  (+25 more)
services/jupyterhub/gpuinfo-nvidia/: Dockerfile  Makefile  README.md  pyproject.toml
services/jupyterhub/gpuinfo-nvidia/gpuinfo_nvidia/: __init__.py  __main__.py  app.py  nvidia.py  schema.py
services/jupyterhub/gpuinfo-nvidia/tests/: test_app.py  test_nvidia.py
services/jupyterhub/optimum-hub-services/: Makefile  pyproject.toml
services/jupyterhub/optimum-hub-services/optimum_hub_services/: __init__.py  abuse_protection.py  auth.py  branding.py  container_stats_cache.py  docker_proxy.py  docker_utils.py  event_log.py  events.py  gpu.py  gpu_client.py  gpuinfo_sidecar.py  hooks.py  persisted_cache.py  services.py  timing_spawner.py  user_profiles.py
services/jupyterhub/optimum-hub-services/tests/: conftest.py  test_abuse_protection.py  test_activity_monitor.py  test_api_keys_pool.py  test_branding.py  test_container_stats_cache.py  test_docker_proxy.py  test_docker_resource_assignment.py  test_docker_utils.py  test_downloads_guard.py  test_effective_grants.py  test_event_log.py  test_favicon.py  test_gpu.py  test_gpu_cache_fields.py  test_gpu_detection.py  test_group_resolver.py  test_hydrate.py  test_idle_culler.py  test_image_upgrade.py  test_imports.py  test_password_cache.py  test_persisted_cache.py  test_policy_apply.py  test_policy_bundle.py  test_policy_coerce.py  test_policy_golden.py  test_policy_summary.py  test_rename_sync.py  test_services.py  test_ttl_matrix.py  test_user_profiles.py  test_validator.py  test_volume_cache.py  test_volumes.py
services/jupyterhub/stellars-docker-proxy/: Makefile  pyproject.toml
services/jupyterhub/stellars-docker-proxy/stellars_docker_proxy/: __init__.py  __main__.py  admin.py  config.py  filters.py  manager.py  quota.py  server.py
services/jupyterhub/stellars-docker-proxy/tests/: test_admin.py  test_filters.py  test_manager.py  test_quota.py  test_server.py
services/jupyterhub/stellars-hub-services/: Makefile  pyproject.toml
services/jupyterhub/stellars-hub-services/stellars_hub_services/: __init__.py  abuse_protection.py  api_keys_pool.py  auth.py  docker_proxy.py  docker_utils.py  events.py  gpu.py  gpu_cache.py  gpuinfo_sidecar.py  group_resolver.py  groups_config.py  hooks.py  idle_culler.py  services.py  timing_spawner.py  user_profiles.py  volume_cache.py
services/jupyterhub/stellars-hub-services/tests/: conftest.py  test_abuse_protection.py  test_activity_monitor.py  test_api_keys_pool.py  test_branding.py  test_docker_proxy.py  test_docker_resource_assignment.py  test_docker_utils.py  test_downloads_guard.py  test_effective_grants.py  test_event_log.py  test_favicon.py  test_gpu.py  test_gpu_cache_fields.py  test_gpu_detection.py  test_group_resolver.py  test_idle_culler.py  test_image_upgrade.py  test_imports.py  test_password_cache.py  test_persisted_cache.py  test_policy_apply.py  test_policy_bundle.py  (+9 more)
services/jupyterhub/stellars_hub/: Makefile  pyproject.toml
(+743 files in other folders)
