[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duoptimum-docker-proxy"
version = "4.0.7"
description = "Owner-scoped reverse proxy for the Docker socket - per-user labels, quota, and filtering"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
