[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duoptimum-hub-services"
version = "4.0.11"
description = "Stellars JupyterHub platform logic package"
requires-python = ">=3.10"
dependencies = [
    "docker",
    "dockerspawner",
    "jupyterhub-nativeauthenticator",
    "jupyterhub-idle-culler",
    "pyyaml",
    "xkcdpass",
    "aiohttp",
    "escapism",
]

[project.optional-dependencies]
test = ["pytest"]
