[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duoptimum-hub-services"
version = "4.0.19"
description = "Stellars JupyterHub platform logic package"
requires-python = ">=3.10"
dependencies = [
    "docker",
    "dockerspawner",
    "jupyterhub-nativeauthenticator",
    "oauthenticator",                  # ships GenericOAuthenticator ("generic-oauth") for the optional Keycloak/OIDC path (see jupyterhub_config.py Authentication)
    "jupyterhub-idle-culler",
    "pyyaml",
    "xkcdpass",
    "aiohttp",
    "escapism",
    "loguru",
]

[project.optional-dependencies]
test = ["pytest"]

# Platform application entry point - launches the DuoptimumHub subclass in place
# of the stock `jupyterhub` command (see conf/bin/start-platform.sh).
[project.scripts]
duoptimum-hub = "duoptimum_hub_services.app:main"
